--- a/src/app/modules/attendance/attendancecount/attendancecount.component.html
+++ b/src/app/modules/attendance/attendancecount/attendancecount.component.html
@@ -3,14 +3,14 @@
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="searchForm">
 
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
         <mat-label>from</mat-label>
         <input formControlName="searchFromDate" matInput [matDatepicker]="FromDate" autocomplete="off">
         <mat-datepicker-toggle matSuffix [for]="FromDate"></mat-datepicker-toggle>
         <mat-datepicker #FromDate></mat-datepicker>
-    </mat-form-field>
+    </mat-form-field> -->
     <mat-form-field appearance="outline">
-        <mat-label>to</mat-label>
+        <mat-label>Date</mat-label>
         <input formControlName="searchToDate" matInput [matDatepicker]="ToDate" autocomplete="off">
         <mat-datepicker-toggle matSuffix [for]="ToDate"></mat-datepicker-toggle>
         <mat-datepicker #ToDate></mat-datepicker>
