--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -4,55 +4,79 @@
         <div style="font-size:26px;margin-bottom:30px;flex-wrap: wrap;">Features and Purpose of Education Management
             System
         </div>
-        <p>
-            <b>Enquiries and Admissions Management</b><br>
-            With the help of the Education Management System, the most commonly asked questions and enquiries regarding
-            admissions can be easily answered. This can free up a lot of time and resources
-            which can be allocated elsewhere.
-        </p>
-        <p>
-            <b>Management of Fee Collections</b><br>
-            Fee collection can be made easy with the help of the Educational Management System, as it
-            calculates and displays fee amount, due and payment details.
-        </p>
-        <p>
-            <b>Examination Management</b><br>
-            An Education Management System can be useful for planning, scheduling, and informing important
-            information about exams by using scheduling. It can also be used to publish exam
-            results that can be accessed by the students and teachers. Further detailed reports can be created using
-            this data, and based on this, student performance can be tracked.
-        </p>
-        <p>
+        <div style="margin-bottom: 30px;">
+            <!-- <div style="margin:0px 15px 15px 0px;">
+                <img style="width:100%;"
+                    src="../../assets/images/closeup-business-woman-hand-typing-laptop-keyboard-with-m.jpg" />
+         </div> -->
+            <div>
+                <b>Enquiries and Admissions Management</b><br>
+                With the help of the Education Management System, the most commonly asked questions and enquiries
+                regarding
+                admissions, rules and policies can be easily answered. This can free up a lot of time and resources
+                which can be allocated elsewhere.
+            </div>
+        </div>
+        <div  style="margin-bottom: 30px;">
+            <!-- <div style="margin:0px 15px 15px 0px;">
+                <img style="width:400px"
+                    src="../../assets/images/businesspeople-meeting-plan-analysis-graph-company-finance-strat.jpg" />
+            </div> -->
+            <div>
+                <b>Management of Fee Collections</b><br>
+                Fee collection can be made easy with the help of the Educational Management System, as it
+                calculates and displays fee amount, due and payment details.
+            </div>
+        </div>
+        <div style="margin-bottom: 30px;">
+            <div>
+                <b>Examination Management</b><br>
+                An Education Management System can be useful for planning, scheduling, and informing important
+                information about exams by using scheduling. It can also be used to publish exam
+                results that can be accessed by the students and teachers. Further detailed reports can be created using
+                this data, and based on this, student performance can be tracked.
+            </div>
+            <!-- <div style="margin:0px 0px 15px 15px;">
+                <img style="width:400px" src="../../assets/images/closeup-business-woman-making-notes-document.jpg" />
+            </div> -->
+        </div>
+
+        <p style="margin-bottom: 30px;">
             <b>Student Information Management</b><br>
             This feature helps teachers and parents to access essential information on students' academic activities
             quickly and easily. This may include fee attendance records, exam results, payment history, and general
             academic progress.
         </p>
-        <p>
+        <p style="margin-bottom: 30px;">
             <b>Attendance Management</b><br>
-            Attendance tracking and its management is made entirely easier. Teachers and school administrators do not
+            Attendance tracking and its management is made entirely easier. Teachers and school administrators do
+            not
             need to track attendance manually but
             simply evaluate automatically generated reports and check where there are issues.
         </p>
-        <p>
+        <p style="margin-bottom: 30px;">
             <b>Lesson Plans & Assignments</b><br>
             An Education Management System makes it easy for teachers to share assignments and lesson plans with
             students and their parents in advance. These can be downloaded or printed if required.
         </p>
-        <p>
+        <p style="margin-bottom: 30px;">
             <b>Automatic Certificate Generation</b><br>
-            Using Education Management System, Students' education related certificate and other sports activities can
+            Using Education Management System, Students' education related certificate and other sports activities
+            can
             be generated and print easily.
         </p>
-        <p>
-            <b>Timetable management </b><br> This function allows you to quickly organize and sort out the subjects and time
+        <p style="margin-bottom: 30px;">
+            <b>Timetable management </b><br> This function allows you to quickly organize and sort out the subjects
+            and time
             allocated to each of them according to the class and teacher. A hurriedly made timetable will only bring
             confusion and more hurdles in running your educational institute smoothly.
         </p>
         <p>
             <b>Evaluation and Assessment</b>
-            This module enables to conduct online test and exams. Evaluation or assessment of the students can be conducted 
-            by defining question and answer that can be re-used over and over again that can saves teachers' huge amount of time.
+            This module enables to conduct online test and exams. Evaluation or assessment of the students can be
+            conducted
+            by defining question and answer that can be re-used over and over again that can saves teachers' huge
+            amount of time.
         </p>
     </div>
     <div class="loginbox">
