--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -7,7 +7,11 @@
     align-items: flex-start;
     //margin-top: 50px;
 }
-
+.container1 {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
 
 .container {
     display          : flex;
