--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -5,6 +5,22 @@
         <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="studentSearchForm" style="display:flex;flex-direction: column;">
             <div>
+                <mat-form-field appearance="outline" style="width: 100px;">
+                    <mat-label>PID</mat-label>
+                    <input formControlName="searchPID" autocomplete="Off" matInput [maxlength]="10">
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="300">
+                    <mat-label>Student</mat-label>
+                    <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        <mat-option *ngFor="let option of filteredStudents|async" [value]="option">
+                            {{option.Name}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>                
+            </div>
+
+            <div>
                 <!-- <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Previous Class</mat-label>
                     <mat-select formControlName="searchPreviousClassId" (selectionChange)="ClearData()">
@@ -14,6 +30,8 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field> -->
+            
+
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
@@ -31,10 +49,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field appearance="outline" style="width: 100px;">
-                    <mat-label>PID</mat-label>
-                    <input formControlName="searchPID" autocomplete="Off" matInput [maxlength]="10">
-                </mat-form-field>
+                
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>search</mat-label>
                     <mat-select formControlName="searchRemarkId">
@@ -48,41 +63,6 @@
                         {{item.MasterDataName}}
                     </mat-option> -->
                     </mat-select>
-                </mat-form-field>
-            </div>
-            <div>
-                <!-- <mat-form-field appearance="outline">
-                    <mat-label>Father</mat-label>
-                    <input type="text" matInput formControlName="FatherName" [matAutocomplete]="autoF">
-                    <mat-autocomplete #autoF="matAutocomplete" [displayWith]="displayFnF">
-                        <mat-option *ngFor="let option of filteredFathers | async" [value]="option">
-                            {{option.FatherName}}
-                        </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field>
-                <mat-form-field appearance="outline">
-                    <mat-label>Mother</mat-label>
-                    <input type="text" matInput formControlName="MotherName" [matAutocomplete]="autoM">
-                    <mat-autocomplete #autoM="matAutocomplete" [displayWith]="displayFnM">
-                        <mat-option *ngFor="let option of filteredMothers | async" [value]="option">
-                            {{option.MotherName}}
-                        </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field> -->
-                <!-- <mat-form-field appearance="outline" style="width: 150px;">
-                    <mat-label>Admission No.</mat-label>
-                    <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
-                </mat-form-field> -->
-               
-
-                <mat-form-field appearance="outline" [style.width.px]="300">
-                    <mat-label>Student</mat-label>
-                    <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
-                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of filteredStudents|async" [value]="option">
-                            {{option.Name}}
-                        </mat-option>
-                    </mat-autocomplete>
                 </mat-form-field>
                 <button [disabled]="loading" matTooltip="search student" mat-raised-button color="accent"
                     (click)="GetStudent()">
@@ -140,7 +120,9 @@
             <ng-container matColumnDef="Name">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.Name}}
+                    <button style="padding:5px; float: left; width:100%;text-align:left" [disabled]="loading" mat-flat-button (click)="view(element)">
+                        {{element.Name}}
+                    </button>                    
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="ClassName">
