--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -15,8 +15,11 @@
             <button (click)="back()" matTooltip="dashboard" style="margin-right:15px" mat-raised-button>
                 <mat-icon>arrow_back</mat-icon>
             </button>
-            <button (click)="detail()" matTooltip="detail" mat-raised-button>
+            <button (click)="detail()" style="margin-right: 15px;" matTooltip="detail" mat-raised-button>
                 <mat-icon>pageview</mat-icon>
+            </button>
+            <button (click)="admission()" matTooltip="admission" mat-raised-button>
+                <mat-icon>book_online</mat-icon>
             </button>
         </span>
     </mat-card-subtitle>
