--- a/src/app/modules/admission/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/admission/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -19,14 +19,14 @@ mat-form-field{
     justify-content: center;
     flex:1 1 80px;
 }
-.mat-column-Action,
+
 .mat-column-ClassId,
 .mat-column-Remark{
     //justify-content: center;
     flex:1 1 100px;
 }
 
-.mat-column-ExamStatus, .mat-column-StudentName,.mat-column-FeeTypeId,.mat-column-Remarks{
+.mat-column-Action,.mat-column-ExamStatus, .mat-column-StudentName,.mat-column-FeeTypeId,.mat-column-Remarks{
     flex:1 1 150px;
 }
 mat-cell:first-of-type{
