--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.scss
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.scss
@@ -18,7 +18,7 @@ mat-form-field{
 .mat-column-PhoneNumber,.mat-column-ValidFrom,.mat-column-ValidTo,.mat-column-ContactNo{
     flex:1 1 140px;
 }
-.mat-column-UserName,.mat-column-EmailAddress{
+.mat-column-FirstName,.mat-column-EmailAddress{
     flex:1 1 250px;
 }
 mat-cell:first-of-type{
