--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
-    <mat-toolbar-row class="width100 mat-elevation-z4" style="padding:0px; display:flex;flex-direction: column;justify-content: space-between;">
-        <div style="display:flex;justify-content: space-between;width:100%">
+    <mat-toolbar-row class="width100 mat-elevation-z4" style="padding:0px; display:flex;flex-direction: column;">
+        <div style="display:flex;justify-content: space-between;width:100%;height:95%">
             <div style="margin:10px 10px 10px 15px;" fxLayout="row" fxLayoutAlign="start center">
                 <a [routerLink]="['/']"><img src="{{logoPath}}" alt="{{OrganizationName}}" width="60px" /></a>
                 <span>{{SelectedApplicationName}}</span>
@@ -34,7 +34,9 @@
                 </mat-menu>
             </div>
         </div>
+       
         <div style="background-color:green;height:11px;width:100%"> </div>
+        <!-- <div style="background-color:#cddc39;height:11px;width:100%"> </div> -->
     </mat-toolbar-row>
     <mat-toolbar-row fxShow.gt-xs fxHide.gt-xs
         style="height: 70px !important;box-shadow: 3px 3px 3px var(--maincolor2);" fxLayout="row wrap"
