--- a/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
+++ b/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-title style="margin:20px"><strong>Progress Report</strong></mat-card-title>
     <mat-card-subtitle
-        style="margin-left:20px; align-items: center; font-weight: bold; background-color:lightgray;padding:5px;display: flex;justify-content: space-between;">
+        style="align-items: center; font-weight: bold; background-color:lightgray;padding:5px;display: flex;justify-content: space-between;">
         <span></span>
         <div style="display:flex;">
             <span style="margin-right: 15px;">
