--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,8 +1,11 @@
-
+:host{
+    height:100vh;
+}
 .flex-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
   }
 .maincontent{
     flex:1;
